# wind-tools-shared

./: CLAUDE.md  __init__.py  acoustics.py  csv_loader.py  epsg_selector.py  geo_loaders.py  pyproject.toml  report_style.py  srtm.py  style.py  timezone_lookup.py  windpro_park.py  wtg_presets.py
data/: WTG_Acoustic_Spectra_Loudest_Modes 1.xlsx  power_curves.xlsx
fulcrum/: __init__.py  data_loader.py  file_detector.py  series.py
tests/: self_check.py
