[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "wind-tools-shared"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "streamlit",
    "numpy",
    "pandas",
    "requests",
    "pyproj",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]
