[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wind-tools-shared"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "streamlit",
    "numpy",
    "pandas",
    "requests",
    "pyproj",
    "scipy",
    "matplotlib",
]

# The module files live at the repo root, but tools import them as `shared.*`
# (e.g. `from shared.geo_loaders import ...`). Map the root dir to the `shared`
# package so pip installs an importable top-level `shared` package.
[tool.setuptools]
packages = ["shared", "shared.fulcrum"]

[tool.setuptools.package-dir]
shared = "."

[tool.setuptools.package-data]
shared = ["data/*.xlsx"]
